apps/production/rustdesk/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: rustdesk
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rustdesk
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 21115
          protocol: TCP
        - port: 21116
          protocol: TCP
        - port: 21116
          protocol: UDP
        - port: 21117
          protocol: TCP
        - port: 21118
          protocol: TCP
        - port: 21119
          protocol: TCP
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
    - ports:
        - port: 443
          protocol: TCP
